--- a/Resources/Private/Partials/Application/Systems.html
+++ b/Resources/Private/Partials/Application/Systems.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div id="passendeSysteme" class="row">
             <div class="col-sm-6">
-                <h2>Passende Systeme zu {currentApplication.name}</h2>
+                <h2><f:translate key="matchingSystemsFor" default="Matching Systems for" /> {currentApplication.name}</h2>
             </div>
         </div>
         <div class="row">
