--- a/Resources/Private/Partials/Component/Applications.html
+++ b/Resources/Private/Partials/Component/Applications.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-sm-6">
-        <h2>Diese Anwendungen könnten Sie auch interessieren</h2>
+        <h2><f:translate key="relatedApplications" default="You could also be interested in these Applications"/></h2>
     </div>
 </div>
 
