--- a/Resources/Private/Partials/Component/CategorySelector.html
+++ b/Resources/Private/Partials/Component/CategorySelector.html
@@ -41,7 +41,7 @@
                     </div>
                 </div>
                 <!-- Headiung mobile-->
-                    <h1 class="mainHeadline subpage visible-xs">Komponenten</h1>
+                <h1 class="mainHeadline subpage visible-xs"><f:translate key="components" default="Components"/></h1>
 
             </div>
         </div>
