--- a/Resources/Private/Partials/System/Components.html
+++ b/Resources/Private/Partials/System/Components.html
@@ -1,6 +1,6 @@
 <div id="passendeKomponenten" class="row">
 	<div class="col-sm-6">
-		<h2>Empfohlene Komponenten</h2>
+    <h2><f:translate key="recommendedComponents" default="recommended components"/></h2>
 	</div>
 </div>
 <div class="row">
