--- a/Resources/Private/Partials/System/HeaderImage.html
+++ b/Resources/Private/Partials/System/HeaderImage.html
@@ -81,7 +81,7 @@
                                 <img class="img-responsive" src="{f:uri.resource(path: 'art/quad-bilderheader-blind.png', extensionName: 'template')}">
                             </a>
                             <a class="headerimageToolbarBTN col-4" href="#anfrageKomponenten">
-                                <img class="img-responsive" src="{f:uri.resource(path: 'art/icon-toolbar-anfrage.png', extensionName: 'template')}"><span>Komponenten anfragen</span>
+                                <img class="img-responsive" src="{f:uri.resource(path: 'art/icon-toolbar-anfrage.png', extensionName: 'template')}"><span><f:translate key="inquireComponents" default="request components"/></span>
                             </a>
 
                         </div>
@@ -125,7 +125,7 @@
                             <img class="img-responsive" src="{f:uri.resource(path: 'art/icon-toolbar-info.png', extensionName: 'template')}">
                         </a>
                         <a class="headerimageToolbarBTN col-6" href="#anfrageKomponenten">
-                            <img class="img-responsive" src="{f:uri.resource(path: 'art/icon-toolbar-anfrage.png', extensionName: 'template')}"><span>Komponenten anfragen</span>
+                            <img class="img-responsive" src="{f:uri.resource(path: 'art/icon-toolbar-anfrage.png', extensionName: 'template')}"><span><f:translate key="inquireComponents" default="request components"/></span>
                         </a>
 
                     </div>
