--- a/Resources/Private/Templates/Component/Contact.html
+++ b/Resources/Private/Templates/Component/Contact.html
@@ -1,5 +1,5 @@
 <div class="content">
 	<div class="container">
-		<h3>Vielen Dank für Ihre Anfrage, wir werden uns umgehend bei Ihnen melden.</h3>
+		<h3><f:translate key="inquiryReceived" default="We've received your inquiry and will get back to you as soon as possible."/></h3>
 	</div>
 </div>
