--- a/Resources/Private/Partials/Component/Components.html
+++ b/Resources/Private/Partials/Component/Components.html
@@ -1,6 +1,8 @@
 <div class="row">
     <div class="col-sm-6">
-        <h2>Komponenten die mit {currentComponent.name} harmonieren</h2>
+        <h2>
+        {f:translate(key: 'fittingComponents', default: 'Components that work well with %s', arguments: {0: currentComponent.name})}
+        </h2>
     </div>
 </div>
 <div class="row">
