--- a/Resources/Private/Partials/Component/Contact.html
+++ b/Resources/Private/Partials/Component/Contact.html
@@ -6,7 +6,7 @@
     <div class="anfrage-step-1">
         <div class="row">
             <div class="col-sm-6">
-                <h2 id="form-contact">Ihre persönlichen Daten</h2>
+                <h2 id="form-contact">{f:translate(key: 'personalInformation')}</h2>
             </div>
         </div>
         <div class="row">
@@ -21,37 +21,37 @@
                     <div class="form-group">
 
                         <f:form.validationResults for="clientName">
-                            <f:form.textfield name="clientName" class="form-control {f:if(condition: validationResults.flattenedErrors, then: 'error')}" id="clientName" placeholder="Ihre Name *" />
+                            <f:form.textfield name="clientName" class="form-control {f:if(condition: validationResults.flattenedErrors, then: 'error')}" id="clientName" placeholder="{f:translate(key: 'placeholderName', default: 'your name*')}" />
                             <f:if condition="{validationResults.flattenedErrors}">
-                                <p class="text-danger">Bitte gib deinen Namen ein!</p>
+                                <p class="text-danger"><f:translate key="errorName" default="please enter your name!"/></p>
                             </f:if>
                         </f:form.validationResults>
 
                         <f:form.textfield name="clientCompany" class="form-control" id="clientCompany" placeholder="Firma" />
 
                         <f:form.validationResults for="clientEmail">
-                            <f:form.textfield name="clientEmail" class="form-control {f:if(condition: validationResults.flattenedErrors, then: 'error')}" id="clientEmail" placeholder="Ihre E-Mail *" />
+                            <f:form.textfield name="clientEmail" class="form-control {f:if(condition: validationResults.flattenedErrors, then: 'error')}" id="clientEmail" placeholder="{f:translate(key: 'placeholderEmail', default: 'your e-mail *')}" />
                             <f:if condition="{validationResults.flattenedErrors}">
-                                <p class="text-danger">Bitte gib eine richtige E-Mail ein!</p>
+                                <p class="text-danger"><f:translate key="errorEmail" default="please enter a real e-mail address!"/></p>
                             </f:if>
                         </f:form.validationResults>
 
-                        <f:form.textfield name="clientPhone" class="form-control" id="clientPhone" placeholder="Telefon" />
+                        <f:form.textfield name="clientPhone" class="form-control" id="clientPhone" placeholder="{f:translate(key: 'placeholderPhone', default: 'phone')}" />
                     </div>
                 </div>
                 <div class="col-sm-6">
                     <div class="form-group">
                         <f:form.validationResults for="squareMeasure">
-                            <f:form.textfield name="squareMeasure" class="form-control {f:if(condition: validationResults.flattenedErrors, then: 'error')}" id="squareMeasure" placeholder="Gewünschte Fläche in m² *" />
+                            <f:form.textfield name="squareMeasure" class="form-control {f:if(condition: validationResults.flattenedErrors, then: 'error')}" id="squareMeasure" placeholder="{f:translate(key: 'placeholderSquareMeasure', default: 'area in m² *')}" />
                             <f:if condition="{validationResults.flattenedErrors}">
-                                <p class="text-danger">Bitte gib eine Fläche an!</p>
+                                <p class="text-danger"><f:translate key="errorSquareMeasure" default="Please enter a area!"/></p>
                             </f:if>
                         </f:form.validationResults>
 
-                        <f:form.textarea name="clientMessage" class="form-control" id="clientMessage" rows="3" placeholder="Bemerkungen" />
+                        <f:form.textarea name="clientMessage" class="form-control" id="clientMessage" rows="3" placeholder="{f:translate(key: 'placeholderClientMessage', default: 'comments')}" />
                         <div class="row">
                             <div class="col-sm-6 col-sm-offset-6">
-                                <button id="submit-formular" type="submit" class="btn btn-default">Anfrage jetzt senden</button>
+                                <button id="submit-formular" type="submit" class="btn btn-default">{f:translate(key: 'inquireSend', default: 'send inquiry')}</button>
                             </div>
                         </div>
                     </div>
